# VDAO-Presale-smart-contract

./: .gitignore  Anchor.toml  README.md
programs/vdao/: Cargo.toml
programs/vdao/src/: lib.rs
tests/: vdao.ts
