[package]
name = "vdao"
version = "0.1.0"
description = "VDAO Mint and Burn Program"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "vdao"

[features]
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]
no-entrypoint = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = { version = "0.31.0", features = ["init-if-needed"] }
anchor-spl = { version = "0.31.0" }
